--- a/style/main.less
+++ b/style/main.less
@@ -1128,8 +1128,10 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 padding-right: 10px;
             }
             .swiper-slider{
-                
-                margin-top: 65px;
+                margin: 0;
+                margin-top: 178px;
+                width: 100%;
+                height: 100%;
             }
             .loading-lazy__section {
                 margin-bottom: 5px;
@@ -1137,10 +1139,17 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     }
 //////////////////////////////////////Lazy Loading Images with JavaScript Intersection Observer///////////////////////////////////////////////////////
 
+@media only screen and (max-width: 1900px){
 
+.tab-slider__section .tab-slider-navbar {
+    position: relative;
+    margin: -1007px 12px 38px 6px;
+    z-index: 66;
+    opacity: 0.7;
+    max-width: 928px;
+}
 
-
-
+}
 
 
 
